...
    
    func show(quiz result: QuizResultsViewModel) {
        let alertModel = AlertModel(
            title: result.title,
            message: result.text,
            buttonText: result.buttonText,
            accessibilityIdentifier: "Game results"
        ) { [weak self] in
            self?.presenter.restartGame()
        }
        
        alertPresenter.show(alertModel: alertModel)
    }
...
